# PulseDE

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py
infra/: docker-compose.yml  prometheus.yml
src/: consumer.py  dashboard.py  main.py  producer.py  scheduler.py
src/dashboard/: streamlit_app.py
src/ingestion/: kafka_producer.py  news_fetcher.py  schema.py
src/ml/: ensemble.py  evaluator.py  feature_engineering.py
src/monitoring/: drift_detector.py
src/orchestration/: pipeline.py
src/processing/: kafka_consumer.py
src/serving/: api.py
src/storage/: redis_cache.py  timescale_writer.py
tests/unit/: test_ml.py
