[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pulsede"
version = "2.0.0"
description = "Real-Time Financial Sentiment Intelligence Pipeline — Multi-Model NLP Ensemble, TimescaleDB, MLflow, FastAPI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ananya T" }]
keywords = ["finbert", "sentiment-analysis", "kafka", "mlops", "timescaledb", "nlp", "financial-ml"]

dependencies = [
    # Data ingestion
    "requests>=2.31",
    "httpx>=0.27",
    "feedparser>=6.0",

    # Kafka
    "confluent-kafka>=2.4",
    "fastavro>=1.9",

    # NLP / ML
    "torch>=2.2",
    "transformers>=4.40",
    "sentence-transformers>=3.0",
    "datasets>=2.19",
    "accelerate>=0.30",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "numpy>=1.26",
    "pandas>=2.2",
    "spacy>=3.7",

    # Explainability & calibration
    "shap>=0.45",
    "netcal>=1.3",

    # Storage
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "redis>=5.0",

    # MLOps
    "mlflow>=2.13",
    "evidently>=0.4",
    "prometheus-client>=0.20",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp>=1.24",

    # Orchestration
    "prefect>=2.19",
    "apscheduler>=3.10",

    # Serving
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-jose[cryptography]>=3.3",

    # Dashboard
    "streamlit>=1.36",
    "plotly>=5.22",
    "altair>=5.3",

    # Config & utilities
    "python-dotenv>=1.0",
    "structlog>=24.2",
    "tenacity>=8.3",
    "simhash>=2.1",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "hypothesis>=6.100",
    "factory-boy>=3.3",
]
notebooks = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "matplotlib>=3.9",
    "seaborn>=0.13",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "UP", "ANN", "S", "B", "A", "C4", "PT"]
ignore = ["ANN101", "ANN102", "S101"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
